2004-10-23 Alexander Dymo <adymo@kdevelop.org>
    * KDevelop documentation viewer and KDevAssistant:
      - implemented font configuration options;
      - disabled loading of KHTML plugins.
      
2004-10-21 Alexander Dymo <adymo@kdevelop.org>
    * KDevelop Platform:
      - implemented profiles library and editor engine;
      - implemented profiles editor (kdevprofileeditor application);
      - set up X-KDevelop-Property properties in .desktop files of KDevelop parts.

2004-10-21  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Added a KDE Korundum Ruby application framework based on the languages/cpp/app_templates/kapp
   C++ project template
 * Improved the Ruby class parser
 * Both classes and modules are shown in the class browser
 * Class or 'singleton' methods supported and appear as 'static' methods
 * Access types of 'public', 'protected' and 'private' supported
 * attr_accessor, attr_reader and attr_writer method definitions supported. For attr_accessor or 
   attr_writer a 'foo=' method is shown.
 * Operator methods are shown in the class browser too

2004-10-13 Alexander Neundorf <neundorf@kde.org>
    *buildtools/custommakefiles/:
    -add two submenus "Object Files" and "Other Files" to the "Build Targets" menu
    -add new tag <filelistdirectory> so that the filelist file can be 
     located outside the source directory. This is currently only written
     by the cmake kdevelop3 project file generator

2004-08-27 Amilcar Lucas <amilcar@kdevelop.org>
    * Updated support for Doxygen 1.3.8

2004-06-21 Robert Gruber <rgruber@users.sourceforge.net>
    * Added drag and drop support to SnippetPart
    * Added filter support to AppOutputView

2004-06-17 Jens Dagerbo <jens.dagerbo@swipnet.se>
    * Added optional automatic reload on external file modification. This is only available with katepart.
    * Added CopyTo plugin. A small utility to do network transparent file copying using KIO.